# arnie

./: .gitignore  LICENSE  README.md  arnie_file.txt  backup.py  bpps.py  control.bpseq  example_arnie_file.txt  free_energy.py  mfe.py  mfe_bootstrap.py  pfunc.py  pk_predictors.py  pyproject.toml  sample_structures.py  utils.py
RNAGraph/: README.md  RG_utils.py  RNAGraph.py  RNAGraph_demo.ipynb
arnie/: bpps.py  mfe.py  mfe_bootstrap.py  pfunc.py  pk_predictors.py  utils.py
docs/: README.md  _sidebar.md  index.html  setup_doc.md
examples/: Kappel_PNAS_analysis.ipynb  arnie_x_threshknot_example.ipynb  dot.ps  jan21_PUM_efold_analysis.csv  kappel_pnas_blind_PUM2.txt  protein_binding_dG_analysis_eternafold.ipynb  ribologic_SI.txt  sample_PUM_array_data.txt  start_here.ipynb
mea/: mea.py  mea_utils.py  threshknot.py
notebooks/: IntroToArnie.ipynb  README.md  dot.ps  kappel_pnas_MS2.txt  kappel_pnas_SRP.txt  riboswitch_fold_change.ipynb  rnastructure_z_constrained_bug.ipynb  start_here.ipynb
old-docs/: setup_doc.md
parameter_files/: contrafold.params.complementary  contrafold.params.noncomplementary  learntofold.contrafold.params
revi/: REVI-CM.ipynb  example.ipynb  revi.py
scripts/: evaluate_pk_predictors.py  evaluate_shapeknots_fold.py  score_pseudoacc_mea.py  write_bpp_matrices.py  write_unpaired_vectors.py
test/: test_bpps.py  test_converters.py  test_file_readers.py  test_helix_getting_and_removing.py  test_linearpartition.py  test_nodangles.py  test_pfunc.py  test_pk.py  test_sample_struct.py  test_settings.py  test_vfold_versions.py
(+36 files in other folders)
