
[project]
name = "arnie"
version = "0.1.5"
authors = [
  { name="Das Lab", email="thedaslab@stanford.edu" },
]
description = "A Python utility library to estimate, compare, and reweight RNA energetics across many secondary structure algorithms."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.15",
  "scipy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/DasLab/arnie"
"Bug Tracker" = "https://github.com/DasLab/arnie/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"